# eve-market-analyser

./: Cargo.toml  pre_build.sh
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
eve-api/: Cargo.toml  README.md
eve-api/src/apis/: alliance_api.rs  assets_api.rs  bookmarks_api.rs  calendar_api.rs  character_api.rs  client.rs  clones_api.rs  configuration.rs  contracts_api.rs  corporation_api.rs  dogma_api.rs  faction_warfare_api.rs  fittings_api.rs  fleets_api.rs  incursions_api.rs  industry_api.rs  insurance_api.rs  killmails_api.rs  location_api.rs  loyalty_api.rs  market_api.rs  mod.rs  opportunities_api.rs  planetary_interaction_api.rs  search_api.rs  skills_api.rs  sovereignty_api.rs  status_api.rs  universe_api.rs  user_interface_api.rs  wallet_api.rs  wars_api.rs
eve-api/src/models/: bad_request.rs  delete_characters_character_id_mail_labels_label_id_unprocessable_entity.rs  delete_fleets_fleet_id_members_member_id_not_found.rs  delete_fleets_fleet_id_squads_squad_id_not_found.rs  delete_fleets_fleet_id_wings_wing_id_not_found.rs  error_limited.rs  forbidden.rs  gateway_timeout.rs  get_alliances_alliance_id_contacts_200_ok.rs  get_alliances_alliance_id_contacts_labels_200_ok.rs  get_alliances_alliance_id_icons_not_found.rs  get_alliances_alliance_id_icons_ok.rs  get_alliances_alliance_id_not_found.rs  get_alliances_alliance_id_ok.rs  get_characters_character_id_agents_research_200_ok.rs  get_characters_character_id_assets_200_ok.rs  (+327 more)
eve_market_analyser/: Cargo.toml
eve_market_analyser/src/: main.rs
